--- a/ml_notes/cs229/cs229_local.html
+++ b/ml_notes/cs229/cs229_local.html
@@ -133,6 +133,16 @@
       <p>In this case, when <span class="math inline">\(z={\theta}^Tx\)</span>,</p>
       <p><span class="math display">\[b{^{(i)}}= \frac{\partial\tau{^{(i)}}}{\partial{\theta}_j} = \frac{x_j{^{(i)}}}{1+({\theta}^Tx)^2}.\]</span></p>
       <p>In general, sigmoid functions will tend to give a value of <span class="math inline">\(b{^{(i)}}\)</span> that is small when <span class="math inline">\(|{\theta}^Tx|\)</span> is large, symmetric around <span class="math inline">\({\theta}^Tx=0\)</span>, and has the same sign as <span class="math inline">\(x_j\)</span> since <span class="math inline">\(\tau - 1/2\)</span> will be an increasing odd function; the derivative of an increasing odd function is even and positive; and this positive even function will be multiplied by <span class="math inline">\(x_j\)</span> to derive the final value of <span class="math inline">\(b{^{(i)}}.\)</span> The values of <span class="math inline">\(b{^{(i)}}\)</span> will be small for large <span class="math inline">\(|{\theta}^Tx|\)</span> because <span class="math inline">\(\tau({\theta}^Tx)\)</span> necessarily flattens out for large input values (since it’s monotonic and bounded in <span class="math inline">\([0,1]\)</span>).</p>
+      <p>Ng states that the assumption of a Bernoulli distribution for <span class="math inline">\(p(y|x;{\theta})\)</span> results in the traditional gradient update rule for logistic regression, but there is another choice available in the argument. The definition of a Bernoulli distribution means that we must have</p>
+      <p><span class="math display">\[p(y|x;{\theta}) = \begin{cases}
+      h_{\theta}(x) &amp; \text{if } y = 1, \text{ and} \\
+      1 - h_{\theta}(x) &amp; \text{otherwise}.
+      \end{cases}\]</span></p>
+      <p>There are a number of expressions that also capture this same behavior for the two values <span class="math inline">\(y=0\)</span> and <span class="math inline">\(y=1.\)</span> The one used in the course is</p>
+      <p><span class="math display">\[p(y|x;{\theta}) = h^y(1-h)^{1-y},\]</span></p>
+      <p>which is convenient since we’re working with the product <span class="math inline">\(p(y) = \prod_i p(y{^{(i)}}).\)</span> However, we could have also worked with</p>
+      <p><span class="math display">\[p(y|x;{\theta}) = yh + (1-y)(1-h),\]</span></p>
+      <p>which also gives exactly the needed values for the cases <span class="math inline">\(y=1\)</span> and <span class="math inline">\(y=0.\)</span> Although the traditional expression is easier to work with, it seems worth nothing that there is a choice to be made.</p>
       <div id="refs" class="references">
       
       </div>
