--- a/ml_notes/cs229/cs229_local.html
+++ b/ml_notes/cs229/cs229_local.html
@@ -16,6 +16,7 @@
       <div class="date">331.2016</div>
       <p>These are notes I’m taking as I review material from Andrew Ng’s CS 229 course on machine learning. Specifically, I’m watching <a href="https://www.youtube.com/view_play_list?p=A89DCFA6ADACE599">these videos</a> and looking at the written notes and assignments posted <a href="http://cs229.stanford.edu/materials.html">here</a>. These notes are available in two formats: <a href="http://tylerneylon.com/notes/cs229/cs229.html">html</a> and <a href="http://tylerneylon.com/notes/cs229/cs229.pdf">pdf</a>.</p>
       <p>I’ll organize these notes to correspond with the written notes from the class.</p>
+      <p>As I write these notes, I’m also putting together some <a href="http://tylerneylon.com/notes/cs229/cs229hw.html">homework solutions</a>.</p>
       <h1 id="on-lecture-notes-1"><span class="header-section-number">1</span> On lecture notes 1</h1>
       <p>The notes in this section are based on <a href="http://cs229.stanford.edu/notes/cs229-notes1.pdf">lecture notes 1</a>.</p>
       <h2 id="gradient-descent-in-general"><span class="header-section-number">1.1</span> Gradient descent in general</h2>
