--- a/ml_notes/cs229/cs229hw_local.html
+++ b/ml_notes/cs229/cs229hw_local.html
@@ -136,6 +136,11 @@ np.savetxt(&#39;theta.txt&#39;, theta)</code></pre>
 <p><span class="math display">\[{\theta}= (2.62051, -0.76037, -1.17195).\]</span></p>
 <p>The first value <span class="math inline">\({\theta}_0\)</span> represents the constant term, so that the final model is given by</p>
 <p><span class="math display">\[y = g(2.62 - 0.76x_1 - 1.17x_2).\]</span></p>
+<h3 id="part-c"><span class="header-section-number">1.1.3</span> Part (c)</h3>
+<div class="figure">
+<p class="caption">The data points given for problem 1.1 along with the decision boundary learned by logistic regression as executed by Newton’s method.</p>
+<img src="images/pr1_1c.png" alt="The data points given for problem 1.1 along with the decision boundary learned by logistic regression as executed by Newton’s method." />
+</div>
 <h2 id="poisson-regression-and-the-exponential-family"><span class="header-section-number">1.2</span> Poisson regression and the exponential family</h2>
 <h3 id="part-a-1"><span class="header-section-number">1.2.1</span> Part (a)</h3>
 <p>Write the Poisson distribution as an exponential family:</p>
