--- a/ml_notes/cs229/cs229hw_local.html
+++ b/ml_notes/cs229/cs229hw_local.html
@@ -178,6 +178,9 @@ T(y) &amp; = &amp; y.
    &amp; = &amp; E[y] - a&#39;(\eta).
 \end{array}\]</span></p>
 <p>Thus we can conclude that <span class="math inline">\(E[y] = a&#39;(\eta) = a&#39;({\theta}^Tx),\)</span> which completes the solution.</p>
+<h2 id="gaussian-discriminant-analysis"><span class="header-section-number">1.3</span> Gaussian discriminant analysis</h2>
+<h3 id="part-a-2"><span class="header-section-number">1.3.1</span> Part (a)</h3>
+<p>This problem is to show that a two-class GDA solution effectively provides a model that takes the form of a logistic function, similar to logistic regression. This is something I already did in section 2.1 of <a href="http://tylerneylon.com/notes/cs229/cs229.html">my notes</a>.</p>
     </div>
   </body>
 </html>
